Set scale up adaptation to 10% of the number of instances